examples/errors/syntax_error.jj
func main
{
    let a { 1 }

}